<?xml version="1.0"?>
<package>
  <name>irb6640_gazebo</name>
  <version>0.0.0</version>
  <description>The irb6640_gazebo package</description>

  <maintainer email="Shuyang@todo.todo">Shuyang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>abb_resources</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>position_controllers</run_depend>

</package>
